--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - landing  page final</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <div id="div-header">
   <header id="header">
     <nav id="nav-bar">
@@ -68,3 +78,7 @@
   </ol>
       <span>Copyright 2022, Pickle Pals©</span>
 </footer>
+<!-- partial -->
+  
+</body>
+</html>
