--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - landing  page final</title>
+  <title>CodePen - landing  page final mobile friendly testing media queries</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
+<!--Co-written by Vivian Phillips and Monica Tan-->
+    
 <div id="div-header">
   <header id="header">
     <nav id="nav-bar">
@@ -40,7 +42,7 @@
   <section class="video-zone">
     <iframe id="video" title="Hedgehog Boat" src="https://www.youtube.com/embed/SoZiZE2Zcng" height="350" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *"></iframe>
 
-    <p class="info-text"> Our hedgehogs are 100% crafted by our local artisans. Each quill is perfectly put into place and we make sure that each hedgehog has at least 4000 quills. The hedgehogs we produce go through a rigorous inspection and must pass this test before being shipped out to you. Part of this testing program includes checking the buoyancy of the hoglet. All hoglets are fed 100% organic vegetables sourced locally by our professionally trained farmers. They also are fed oragnic farm fresh insects. Each hedgehog purchase includes a starter package, that includes: One (1) specialized feed bag, an owner instruction manual, and one (1) free random sweater and hat combination set for your prickle pal, when you sign up with our newsletter!
+    <p class="info-text"> Our hedgehogs are 100% crafted by our local artisans. Each quill is perfectly put into place and we make sure that each hedgehog has at least 4000 quills. The hedgehogs we produce go through a rigorous inspection and must pass this test before being shipped out to you. Part of this testing program includes checking the buoyancy of the hoglet. All hoglets are fed 100% organic vegetables sourced locally by our professionally trained farmers. They also are fed organic farm fresh insects. Each hedgehog purchase includes a starter package, that includes: One (1) specialized feed bag, an owner instruction manual, and one (1) free random sweater and hat combination set for your prickle pal, when you sign up with our newsletter!
     </p>
   </section>
 </section>
@@ -48,7 +50,7 @@
   <div class="table-item shipping">
     <h2> Shipping </h2>
     <p class="shipping-info table-text">
-      Enjoy high speed shipping across the globe! We pride ourselves in how fast our products go out. Since the nature of our business are live animals, we understand the importance of getting out little guys out to their new parents quickly.
+      Enjoy high speed shipping across the globe! We pride ourselves in how fast our products go out. Since the nature of our business are live animals, we understand the importance of getting out little guys out to their new parents quickly. 
     </p>
     <button class="button shipping-btn">Shipping Info</button>
   </div>
@@ -59,7 +61,7 @@
     <p class="rancher-info table-text">
       We have local ranchers and farmers contracted specially for our business. Our farmers grow everything they need in order to keep our hedgehogs nice and healthy. They are raised on an organic diet of fruits, vegetables and bugs, all sourced from our farmers. Click below to meet some of our ranchers and farmers!
     </p>
-    <button class="button">Our Team</button>
+    <button class="button team">Our Team</button>
   </div>
 
   <div class="table-item premium">
@@ -67,16 +69,17 @@
     <p class="product-info table-text">
       Enjoy our hedgehog speciality products which include live animal feed, organic speciality food pellets, formulated and balanced perfectly for your little friend, clothes, acessories, Quill Shine™ (comes in conditioner, shampoo, and oil) and more! Check out our shop by clicking below.
     </p>
-    <button class="button">Shop Now</button>
+    <button class="button shop-btn">Shop Now</button>
   </div>
 </section>
+
 <footer>
   <ol>
     <li><a href="#">Legal Stuff</a></li>
     <li><a href="#">FAQ</a></li>
     <li><a href="#">Contact</a></li>
   </ol>
-      <span>Copyright 2022, Pickle Pals©</span>
+      <span>Copyright 2022, Prickle Pals©</span>
 </footer>
 <!-- partial -->
   
