--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - landing  page final mobile friendly testing media queries</title>
+  <title>CodePen - landing  page final responsive!!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -82,6 +82,7 @@
       <span>Copyright 2022, Prickle Pals©</span>
 </footer>
 <!-- partial -->
-  
+  <script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script><script  src="./script.js"></script>
+
 </body>
 </html>
